tests/errors/kind_invalid_int_of_complex.f90
program kind_invalid_int_of_complex
    implicit none
    complex(6) :: x
end program
